test/at/error/CellThatErrors.coffee
define ->
  throw (window.TEST_error = new Error())
